[package]
name    = "packet"
version = "0.1.2"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "Network packet handling."
repository  = "https://github.com/meh/rust-packet"
keywords    = ["packet", "network", "ip", "tcp", "udp"]

[dependencies]
error-chain = "0.10"
bitflags    = "0.9"
byteorder   = "1.0"
hwaddr      = "0.1"
